Treat NotifyVirtual events as mouse move events for blink.

This restores the old logic we had for blink to deal with these as mouse
move events but keeping the mouseleave events when we leave the window.

NotifyInferior messages are already dropped at the X11 desktop tree
host but I didn't want to risk breaking any views with addressing this
release block stable issue.

BUG=701637,450631,240300,352106,386896,569998,575208

Review-Url: https://codereview.chromium.org/2751833006
Cr-Commit-Position: refs/heads/master@{#457411}