ui/events/blink/web_input_event.cc
@@ -17,6 +17,10 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "ui/events/blink/web_input_event_builders_win.h"
 #endif
 
+#if defined(USE_X11)
+#include <X11/Xlib.h>
+#endif
+
 namespace ui {
 
 namespace {
@@ -389,6 +393,18 @@ blink::WebMouseEvent MakeWebMouseEventFromUiEvent(const MouseEvent& event) {
       click_count = event.GetClickCount();
       break;
     case ET_MOUSE_EXITED: {
+#if defined(USE_X11)
+      // NotifyVirtual events are created for intermediate windows that the
+      // pointer crosses through. These occur when middle clicking.
+      // Change these into mouse move events.
+      const base::NativeEvent& native_event = event.native_event();
+
+      if (native_event && native_event->type == LeaveNotify &&
+          native_event->xcrossing.detail == NotifyVirtual) {
+        type = blink::WebInputEvent::MouseMove;
+        break;
+      }
+#endif
       static bool s_send_leave =
           base::FeatureList::IsEnabled(features::kSendMouseLeaveEvents);
       type = s_send_leave ? blink::WebInputEvent::MouseLeave
